Prevent date line breaks in news section

--- a/style.css
+++ b/style.css
@@ -9,15 +9,6 @@ body {
 	padding: 1em;
 }
 
-.banner {
-	background-color: #d4e9f7;
-	padding: 1em;
-	margin-bottom: 2em;
-	text-align: center;
-	border-radius: 4px;
-	color: #333;
-}
-
 #profile_pic {
 	float: right;
 	width: 162px;
@@ -51,6 +42,8 @@ th {
 	padding: 0 1rem;
 	text-align: right;
 	font-weight: 600;
+	white-space: nowrap;
+	vertical-align: top;
 }
 
 li {
